iac-app-service.yml
apiVersion: v1
kind: Service
metadata:
  name: iac-challenge-svc
  annotations: 
    cloud.google.com/neg: '{"ingress": true}'
spec: 
  type: LoadBalancer
  selector: 
    run: iac-challenge-app
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: 3000
